--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
         "paths": {
-            "@fuse": ["@fuse/"]
+            "@fuse": ["@fuse/"],
+            "@appCore": ["@appCore/"]
         },
         "module": "esnext",
         "moduleResolution": "node",
