--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
         "angular-in-memory-web-api": "^0.10.0",
         "classlist": "^2.0.0",
         "date-fns": "^2.12.0",
-        "firebase": "^7.14.2",
-        "firebaseui": "^4.5.0",
-        "firebaseui-angular": "^4.1.0",
+        "firebase": "7.7.0",
+        "firebaseui": "4.4.0",
+        "firebaseui-angular": "5.0.0-beta.0",
         "lodash": "^4.17.15",
         "moment": "2.22.2",
         "node-sass": "^4.14.0",
