--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
         "firebaseui-angular": "5.0.0-beta.0",
         "lodash": "^4.17.15",
         "moment": "2.22.2",
+        "ng-location-picker": "^0.1.9",
+        "ngx-google-places-autocomplete": "^2.0.4",
         "node-sass": "^4.14.0",
         "perfect-scrollbar": "^1.5.0",
         "prismjs": "^1.20.0",
         "rxjs": "~6.5.4",
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^9.10.12",
         "tslib": "^1.10.0",
         "web-animations-js": "^2.3.2",
         "zone": "^0.3.4",
@@ -51,7 +55,9 @@
         "@angular/cli": "~9.1.4",
         "@angular/compiler-cli": "~9.1.4",
         "@angular/language-service": "~9.1.4",
+        "@types/googlemaps": "^3.39.4",
         "@types/node": "^12.11.1",
+        "prettier": "2.0.5",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
         "typescript": "~3.8.3"
