done appointment page

--- a/package.json
+++ b/package.json
@@ -1,65 +1,64 @@
 {
-    "name": "era-web-app",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular-material-extensions/google-maps-autocomplete": "^3.2.1",
-        "@angular/animations": "~9.1.4",
-        "@angular/cdk": "^9.2.2",
-        "@angular/common": "~9.1.4",
-        "@angular/compiler": "~9.1.4",
-        "@angular/core": "~9.1.4",
-        "@angular/fire": "^6.0.0",
-        "@angular/flex-layout": "^9.0.0-beta.29",
-        "@angular/forms": "~9.1.4",
-        "@angular/http": "^7.2.16",
-        "@angular/material": "^9.2.2",
-        "@angular/material-moment-adapter": "^9.2.2",
-        "@angular/platform-browser": "~9.1.4",
-        "@angular/platform-browser-dynamic": "~9.1.4",
-        "@angular/router": "~9.1.4",
-        "@swimlane/ngx-datatable": "^17.0.0",
-        "agm-direction": "^0.7.9",
-        "angular-calendar": "^0.28.11",
-        "angular-in-memory-web-api": "^0.10.0",
-        "classlist": "^2.0.0",
-        "date-fns": "^2.12.0",
-        "firebase": "7.7.0",
-        "firebaseui": "4.4.0",
-        "firebaseui-angular": "5.0.0-beta.0",
-        "lodash": "^4.17.15",
-        "moment": "2.22.2",
-        "ng-location-picker": "^0.1.9",
-        "ngx-google-places-autocomplete": "^2.0.4",
-        "node-sass": "^4.14.0",
-        "perfect-scrollbar": "^1.5.0",
-        "prismjs": "^1.20.0",
-        "rxjs": "~6.5.4",
-        "sweetalert": "^2.1.2",
-        "sweetalert2": "^9.10.12",
-        "tslib": "^1.10.0",
-        "web-animations-js": "^2.3.2",
-        "zone": "^0.3.4",
-        "zone.js": "~0.10.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.901.4",
-        "@angular/cli": "~9.1.4",
-        "@angular/compiler-cli": "~9.1.4",
-        "@angular/language-service": "~9.1.4",
-        "@types/googlemaps": "^3.39.4",
-        "@types/node": "^12.11.1",
-        "prettier": "2.0.5",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~3.8.3"
-    }
+  "name": "era-web-app",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@agm/core": "1.0.0-beta.5",
+    "@angular-material-extensions/google-maps-autocomplete": "^3.2.1",
+    "@angular/animations": "~9.1.4",
+    "@angular/cdk": "^9.2.2",
+    "@angular/common": "~9.1.4",
+    "@angular/compiler": "~9.1.4",
+    "@angular/core": "~9.1.4",
+    "@angular/fire": "^6.0.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/forms": "~9.1.4",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^9.2.2",
+    "@angular/material-moment-adapter": "^9.2.2",
+    "@angular/platform-browser": "~9.1.4",
+    "@angular/platform-browser-dynamic": "~9.1.4",
+    "@angular/router": "~9.1.4",
+    "@swimlane/ngx-datatable": "^17.0.0",
+    "agm-direction": "^0.7.9",
+    "angular-in-memory-web-api": "^0.10.0",
+    "date-fns": "1.29.0",
+    "angular-calendar": "0.26.4",
+    "classlist": "^2.0.0",
+    "firebase": "7.7.0",
+    "firebaseui": "4.4.0",
+    "firebaseui-angular": "5.0.0-beta.0",
+    "lodash": "^4.17.15",
+    "moment": "2.22.2",
+    "ngx-google-places-autocomplete": "^2.0.4",
+    "node-sass": "^4.14.0",
+    "perfect-scrollbar": "^1.5.0",
+    "prismjs": "^1.20.0",
+    "rxjs": "~6.5.4",
+    "sweetalert2": "^9.10.12",
+    "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
+    "zone": "^0.3.4",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular/cli": "~9.1.4",
+    "@angular/compiler-cli": "~9.1.4",
+    "@angular/language-service": "~9.1.4",
+    "@types/googlemaps": "^3.39.4",
+    "@types/node": "^12.11.1",
+    "prettier": "2.0.5",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
+  }
 }
