--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
     "@angular/fire": "^6.0.0",
-    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.4",
     "@angular/http": "^7.2.16",
     "@angular/material": "^9.2.2",
+    "@angular/flex-layout": "7.0.0-beta.19",
     "@angular/material-moment-adapter": "^9.2.2",
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
     "@swimlane/ngx-datatable": "^17.0.0",
     "agm-direction": "^0.7.9",
-    "angular-in-memory-web-api": "^0.10.0",
-    "date-fns": "1.29.0",
     "angular-calendar": "0.26.4",
+    "angular-in-memory-web-api": "^0.10.0",
     "classlist": "^2.0.0",
+    "date-fns": "1.29.0",
     "firebase": "7.7.0",
     "firebaseui": "4.4.0",
     "firebaseui-angular": "5.0.0-beta.0",
