--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
     "@angular/fire": "^6.0.0",
+    "@angular/flex-layout": "7.0.0-beta.19",
     "@angular/forms": "~9.1.4",
     "@angular/http": "^7.2.16",
     "@angular/material": "^9.2.2",
-    "@angular/flex-layout": "7.0.0-beta.19",
     "@angular/material-moment-adapter": "^9.2.2",
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
@@ -38,6 +38,7 @@
     "firebaseui-angular": "5.0.0-beta.0",
     "lodash": "^4.17.15",
     "moment": "2.22.2",
+    "ng-starrating": "^1.0.20",
     "ngx-google-places-autocomplete": "^2.0.4",
     "node-sass": "^4.14.0",
     "perfect-scrollbar": "^1.5.0",
